Fix somes images path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body class="mx-auto">
 		<header class="container mt-4 mb-4">
 			<a href="./">
-				<div class="site-logo-container text-center"><img class="site-logo" src="/assets/img/logo.svg" /></div>
+				<div class="site-logo-container text-center"><img class="site-logo" src="./assets/img/logo.svg" /></div>
 				<h1 class="text-center" class="site-title">Les petits plats</h1>
 			</a>
 		</header>
@@ -33,7 +33,7 @@
 						<form id="form" role="search" autocomplete="off">
 							<input id="search" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" />
 							<button id="search-button" class="search-button position-absolute top-50 translate-middle">
-								<img class="search-logo" src="/assets/img/search.svg" />
+								<img class="search-logo" src="./assets/img/search.svg" />
 							</button>
 						</form>
 					</div>
