Add search in ingredients tags

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 					<div class="dropdown me-md-3">
 						<button class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Ingrédients</button>
 						<div class="dropdown-menu ingredients-dropdown" aria-labelledby="dropdownMenuButton1">
+							<form id="form-ingredient" role="search" autocomplete="off">
+								<input id="search-ingredient" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient" />
+							</form>
 							<ul id="ingredients-list"></ul>
 						</div>
 					</div>
