--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<div class="search position-relative">
 						<form id="form" role="search" autocomplete="off">
 							<input id="search" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" />
-							<button id="search-button" class="search-button position-absolute top-50 translate-middle">
+							<div class="search-img position-absolute top-50 translate-middle">
 								<img class="search-logo" src="./assets/img/search.svg" />
-							</button>
+							</div>
 						</form>
 					</div>
 				</div>
@@ -43,21 +43,38 @@
 
 				<div class="btn-group mb-4">
 					<div class="dropdown me-md-3">
-						<button class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Ingrédients</button>
-						<div class="dropdown-menu ingredients-dropdown" aria-labelledby="dropdownMenuButton1">
-							<form id="form-ingredient" role="search" autocomplete="off">
+						<button class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<span class="btn-tag-title">Ingrédients</span>
+							<form id="form-ingredient" role="search" autocomplete="off" class="hide">
 								<input id="search-ingredient" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient" />
 							</form>
+						</button>
+						<div class="dropdown-menu ingredients-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownIngredients">
 							<ul id="ingredients-list"></ul>
 						</div>
 					</div>
 					<div class="dropdown me-md-3">
-						<button class="btn btn-success btn-lg dropdown-toggle btn-appliance" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">Appareil</button>
-						<ul class="dropdown-menu appliances-dropdown" aria-labelledby="dropdownMenuButton2" id="appliances-list"></ul>
+						<button class="btn btn-success btn-lg dropdown-toggle btn-appliance" type="button" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<span class="btn-tag-title">Appareil</span>
+							<form id="form-appliance" role="search" autocomplete="off" class="hide">
+								<input id="search-appliance" class="search-input col-12 rounded" type="text" placeholder="Rechercher un appareil" />
+							</form>
+						</button>
+
+						<div class="dropdown-menu appliances-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownAppliances">
+							<ul id="appliances-list"></ul>
+						</div>
 					</div>
 					<div class="dropdown me-md-3">
-						<button class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">Ustensiles</button>
-						<ul class="dropdown-menu ustensils-dropdown" aria-labelledby="dropdownMenuButton3" id="ustensils-list"></ul>
+						<button class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" type="button" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<span class="btn-tag-title">Ustensiles</span>
+							<form id="form-ustensil" role="search" autocomplete="off" class="hide">
+								<input id="search-ustensil" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ustensile" />
+							</form>
+						</button>
+						<div class="dropdown-menu ustensils-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownUstensils">
+							<ul id="ustensils-list"></ul>
+						</div>
 					</div>
 				</div>
 				<div id="recipes-list" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
@@ -66,6 +83,17 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="./assets/json/recipes.js"></script>
 
-		<script type="module" src="./assets/js/index.js"></script>
+		<script src="./assets/js/class/recipe.js"></script>
+
+		<script src="./assets/js/templates/RecipeCard.js"></script>
+		<script src="./assets/js/templates/TagsList.js"></script>
+
+		<script src="./assets/js/functions/renderRecipesAndTags.js"></script>
+		<script src="./assets/js/functions/mainSearch.js"></script>
+		<script src="./assets/js/functions/searchByTags.js"></script>
+		<script src="./assets/js/functions/searchInTags.js"></script>
+		<script src="./assets/js/functions/btnTag.js"></script>
+
+		<script src="./assets/js/index.js"></script>
 	</body>
 </html>
