multiples changes - Add second main search algorythm in comments - Better responsive - Fix issus with searchTags arrays

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 					</div>
 				</div>
 
-				<div id="tags-container" class="mb-3"></div>
+				<div id="tags-container" class="mb-2 d-flex flex-wrap"></div>
 
 				<div class="btn-group mb-4">
-					<div class="dropdown me-md-3">
+					<div class="dropdown mb-3 me-md-3">
 						<button class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<span class="btn-tag-title">Ingrédients</span>
+							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
 							<form id="form-ingredient" role="search" autocomplete="off" class="hide">
 								<input id="search-ingredient" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient" />
 							</form>
@@ -53,9 +54,10 @@
 							<ul id="ingredients-list"></ul>
 						</div>
 					</div>
-					<div class="dropdown me-md-3">
+					<div class="dropdown mb-3 me-md-3">
 						<button class="btn btn-success btn-lg dropdown-toggle btn-appliance" type="button" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<span class="btn-tag-title">Appareil</span>
+							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
 							<form id="form-appliance" role="search" autocomplete="off" class="hide">
 								<input id="search-appliance" class="search-input col-12 rounded" type="text" placeholder="Rechercher un appareil" />
 							</form>
@@ -65,9 +67,10 @@
 							<ul id="appliances-list"></ul>
 						</div>
 					</div>
-					<div class="dropdown me-md-3">
+					<div class="dropdown mb-3 me-md-3">
 						<button class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" type="button" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<span class="btn-tag-title">Ustensiles</span>
+							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
 							<form id="form-ustensil" role="search" autocomplete="off" class="hide">
 								<input id="search-ustensil" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ustensile" />
 							</form>
