--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 	<body class="mx-auto">
 		<header class="container mt-4 mb-4">
 			<a href="./">
-				<div class="site-logo-container text-center"><img class="site-logo" src="./assets/img/logo.svg" /></div>
-				<h1 class="text-center" class="site-title">Les petits plats</h1>
+				<div class="site-logo-container text-center"><img class="site-logo" alt="Site logo" src="./assets/img/logo.svg" /></div>
+				<h1 class="text-center site-title">Les petits plats</h1>
 			</a>
 		</header>
 		<main id="main">
-			<section class="container">
+			<div class="container">
 				<div class="mb-4 row">
 					<div class="search position-relative">
 						<form id="form" role="search" autocomplete="off">
 							<input id="search" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" />
 							<div class="search-img position-absolute top-50 translate-middle">
-								<img class="search-logo" src="./assets/img/search.svg" />
+								<img class="search-logo" alt="" src="./assets/img/search.svg" />
 							</div>
 						</form>
 					</div>
@@ -43,45 +43,51 @@
 
 				<div class="btn-group mb-4">
 					<div class="dropdown mb-3 me-md-3">
-						<button class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
-							<span class="btn-tag-title">Ingrédients</span>
-							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
-							<form id="form-ingredient" role="search" autocomplete="off" class="hide">
-								<input id="search-ingredient" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient" />
-							</form>
-						</button>
+						<div class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" type="button" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<div class="vertical-center">
+								<span class="btn-tag-title">Ingrédients</span>
+								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
+								<form id="form-ingredient" role="search" autocomplete="off" class="hide">
+									<input id="search-ingredient" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ingrédient" />
+								</form>
+							</div>
+						</div>
 						<div class="dropdown-menu ingredients-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownIngredients">
 							<ul id="ingredients-list"></ul>
 						</div>
 					</div>
 					<div class="dropdown mb-3 me-md-3">
-						<button class="btn btn-success btn-lg dropdown-toggle btn-appliance" type="button" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
-							<span class="btn-tag-title">Appareil</span>
-							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
-							<form id="form-appliance" role="search" autocomplete="off" class="hide">
-								<input id="search-appliance" class="search-input col-12 rounded" type="text" placeholder="Rechercher un appareil" />
-							</form>
-						</button>
+						<div class="btn btn-success btn-lg dropdown-toggle btn-appliance" type="button" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<div class="vertical-center">
+								<span class="btn-tag-title">Appareil</span>
+								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
+								<form id="form-appliance" role="search" autocomplete="off" class="hide">
+									<input id="search-appliance" class="search-input col-12 rounded" type="text" placeholder="Rechercher un appareil" />
+								</form>
+							</div>
+						</div>
 
 						<div class="dropdown-menu appliances-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownAppliances">
 							<ul id="appliances-list"></ul>
 						</div>
 					</div>
 					<div class="dropdown mb-3 me-md-3">
-						<button class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" type="button" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
-							<span class="btn-tag-title">Ustensiles</span>
-							<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
-							<form id="form-ustensil" role="search" autocomplete="off" class="hide">
-								<input id="search-ustensil" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ustensile" />
-							</form>
-						</button>
+						<div class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" type="button" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+							<div class="vertical-center">
+								<span class="btn-tag-title">Ustensiles</span>
+								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
+								<form id="form-ustensil" role="search" autocomplete="off" class="hide">
+									<input id="search-ustensil" class="search-input col-12 rounded" type="text" placeholder="Rechercher un ustensile" />
+								</form>
+							</div>
+						</div>
 						<div class="dropdown-menu ustensils-dropdown rounded-0 rounded-bottom" aria-labelledby="dropdownUstensils">
 							<ul id="ustensils-list"></ul>
 						</div>
 					</div>
 				</div>
 				<div id="recipes-list" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
-			</section>
+			</div>
 		</main>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="./assets/json/recipes.js"></script>
