--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				<div class="btn-group mb-4">
 					<div class="dropdown mb-3 me-md-3">
-						<div class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+						<div class="btn btn-primary btn-lg dropdown-toggle btn-ingredients" role="button" id="dropdownIngredients" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<div class="vertical-center">
 								<span class="btn-tag-title">Ingrédients</span>
 								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
@@ -57,7 +57,7 @@
 						</div>
 					</div>
 					<div class="dropdown mb-3 me-md-3">
-						<div class="btn btn-success btn-lg dropdown-toggle btn-appliance" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+						<div class="btn btn-success btn-lg dropdown-toggle btn-appliance" role="button" id="dropdownAppliances" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<div class="vertical-center">
 								<span class="btn-tag-title">Appareil</span>
 								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 					<div class="dropdown mb-3 me-md-3">
-						<div class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
+						<div class="btn btn-danger btn-lg dropdown-toggle btn-ustensils" role="button" id="dropdownUstensils" data-bs-toggle="dropdown" data-bs-offset="0,0" aria-expanded="false">
 							<div class="vertical-center">
 								<span class="btn-tag-title">Ustensiles</span>
 								<img src="./assets/img/dropdown.svg" alt="" class="ms-3 dropdown-arrow" aria-hidden="true" />
